# manafirewall

./: .gitignore  AUTHORS  CMakeLists.txt  Changes  README.md  TODO.md  setup.py
cmake/: FindPython3Module.cmake
manafirewall/: activeBindingsDialog.py  changeZoneConnectionDialog.py  dialog.py  forwardDialog.py  helpinfo.py  ipsetBaseDialog.py  ipsetEntryDialog.py  logDeniedDialog.py  moduleDialog.py  optionDialog.py  portDialog.py  protocolDialog.py  serviceBaseDialog.py  version.py  version.py.in  zoneBaseDialog.py
po/: CMakeLists.txt  LINGUAS  af.po  am.po  ar.po  ast.po  az.po  be.po  bg.po  bn.po  br.po  bs.po  ca.po  cs.po  cy.po  da.po  de.po  de_AT.po  el.po  en_GB.po  eo.po  es.po  es_419.po  es_MX.po  et.po  eu.po  fa.po  fi.po  fr.po  fur.po  ga.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  hy.po  id.po  is.po  (+47 more)
po/.tx/: config
po/desktop/: LINGUAS  ast.po  ca.po  cs.po  de.po  eo.po  es.po  et.po  fi.po  fr.po  hi.po  it.po  ja.po  manafirewall_desktop.pot  nb.po  nl.po  pt_BR.po  ro.po  ru.po  sl.po  sq.po  sr.po  sv.po  tr.po  uk.po  zh_CN.po
po/desktop/.tx/: config
scripts/: manafirewall
share/applications/: org.mageia.manafirewall.desktop
share/metainfo/: org.mageia.manafirewall.appdata.xml  org.mageia.manafirewall.metainfo.xml
tools/: desktoppo.py  po-compile.sh  po-update.sh  transconverter.py
